recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: not found: value curent
	curent(i)
        ^Tree:12: error: not found: value curent
	curent(i)
        ^