recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

for (i <- 0 to steps-1) {
	current(i)
	avance(length)
	droite(angle)
	curent(i)
	avance(length*shrink)
	recule(length*shrink)
	gauche(2*angle)
	curent(i)
	avance(length*shrink)
	recule(length*shrink)
	droite(angle)
	recule(length)
	
	
	
}

}

